# simple-json-cv

./: .env.example  .gitignore  LICENSE  README.md  example_cv.json  main.py  pyproject.toml  requirements.txt
templates/: cv_template.html
